crates/driver/tests/snapshots/builtins_math_cpp.cpp.snap
---
source: crates/driver/tests/frontend.rs
assertion_line: 107
expression: snap
---
==> global.txt <==
template <typename QBL, typename QBR> static inline auto qb_safe_idiv(QBL qb_l,QBR qb_r)->decltype(qb_l/qb_r){if (!qb_r){error(11);return (decltype(qb_l/qb_r))0;}if constexpr (std::is_signed_v<decltype(qb_l/qb_r)>&&std::is_integral_v<decltype(qb_l/qb_r)>){if (qb_r==-1&&qb_l==std::numeric_limits<decltype(qb_l/qb_r)>::min()){error(6);return qb_l;}}return qb_l/qb_r;}
template <typename QBL, typename QBR> static inline auto qb_safe_mod(QBL qb_l,QBR qb_r)->decltype(qb_l%qb_r){if (!qb_r){error(11);return (decltype(qb_l%qb_r))0;}if constexpr (std::is_signed_v<decltype(qb_l%qb_r)>){if (qb_r==-1)return (decltype(qb_l%qb_r))0;}return qb_l%qb_r;}
int16 *__INTEGER_I=NULL;
int32 *__LONG_L=NULL;
int64 *__INTEGER64_Q=NULL;
float *__SINGLE_F=NULL;
double *__DOUBLE_D=NULL;
long double *__FLOAT_X=NULL;
int32 console=1;
int32 screen_hide_startup=0;
int32 asserts=0;
int32 vwatch=0;
ptrszint data_size=0;
uint8 *data=(uint8*)calloc(1,1);
==> clear.txt <==
*__INTEGER_I=0;
*__LONG_L=0;
*__INTEGER64_Q=0;
*__SINGLE_F=0;
*__DOUBLE_D=0;
*__FLOAT_X=0;
==> maindata.txt <==
if(__INTEGER_I==NULL){
__INTEGER_I=(int16*)mem_static_malloc(2);
*__INTEGER_I=0;
}
if(__LONG_L==NULL){
__LONG_L=(int32*)mem_static_malloc(4);
*__LONG_L=0;
}
if(__INTEGER64_Q==NULL){
__INTEGER64_Q=(int64*)mem_static_malloc(8);
*__INTEGER64_Q=0;
}
if(__SINGLE_F==NULL){
__SINGLE_F=(float*)mem_static_malloc(4);
*__SINGLE_F=0;
}
if(__DOUBLE_D==NULL){
__DOUBLE_D=(double*)mem_static_malloc(8);
*__DOUBLE_D=0;
}
if(__FLOAT_X==NULL){
__FLOAT_X=(long double*)mem_static_malloc(32);
*__FLOAT_X=0;
}
==> mainerr.txt <==
if (!error_handler_history) error_handler_history = qbs_new(0, 0);
if (error_occurred){ error_occurred=0;
exit(99);
}
==> main.txt <==
#include "main0.txt"
qbs *func__compdate() {
return qbs_new_txt(__DATE__);
}
qbs *func__comptime() {
return qbs_new_txt(__TIME__);
}
qbs *func__compvers() {
return qbs_new_txt("QB64-PE v4.7.0-GLFW-UNKNOWN");
}
==> main0.txt <==
error_track_line(0,0,NULL);
S_0:;
#line 2 "builtins_math_cpp.bas"
do{
#line 2 "builtins_math_cpp.bas"
sub__dest(func__console());
#line 2 "builtins_math_cpp.bas"
sub__source(func__console());
#line 2 "builtins_math_cpp.bas"
if(!qbevent)break;evnt(2);}while(r);
#line 7 "builtins_math_cpp.bas"
do{
#line 7 "builtins_math_cpp.bas"
tqbs=qbs_new(0,0);
#line 7 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int16)(func_abs(((int16)((-32768)))))),qbs_new_txt(" ")));
#line 7 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip1;
#line 7 "builtins_math_cpp.bas"
makefit(tqbs);
#line 7 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 7 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int32)(func_abs(((int32)(*__LONG_L))))),qbs_new_txt(" ")));
#line 7 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip1;
#line 7 "builtins_math_cpp.bas"
makefit(tqbs);
#line 7 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 7 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int32)(func_sgn(((int16)(*__INTEGER_I))))),qbs_new_txt(" ")));
#line 7 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip1;
#line 7 "builtins_math_cpp.bas"
makefit(tqbs);
#line 7 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 7 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int16)((*__INTEGER_I))),qbs_new_txt(" ")));
#line 7 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip1;
#line 7 "builtins_math_cpp.bas"
makefit(tqbs);
#line 7 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 7 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((float)(std::floor(*__SINGLE_F))),qbs_new_txt(" ")));
#line 7 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip1;
#line 7 "builtins_math_cpp.bas"
makefit(tqbs);
#line 7 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 7 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((double)(func_fix_double(*__DOUBLE_D))),qbs_new_txt(" ")));
#line 7 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip1;
#line 7 "builtins_math_cpp.bas"
makefit(tqbs);
#line 7 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 7 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((long double)(func_fix_float(*__FLOAT_X))),qbs_new_txt(" ")));
#line 7 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip1;
#line 7 "builtins_math_cpp.bas"
makefit(tqbs);
#line 7 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 7 "builtins_math_cpp.bas"
qbs_print(nothingstring,1);
#line 7 "builtins_math_cpp.bas"
skip1:
#line 7 "builtins_math_cpp.bas"
qbs_free(tqbs);
#line 7 "builtins_math_cpp.bas"
qbs_cleanup(qbs_tmp_base,0);
#line 7 "builtins_math_cpp.bas"
if(!qbevent)break;evnt(7);}while(r);
#line 8 "builtins_math_cpp.bas"
do{
#line 8 "builtins_math_cpp.bas"
tqbs=qbs_new(0,0);
#line 8 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((float)(((float)(std::sin(*__INTEGER_I))))),qbs_new_txt(" ")));
#line 8 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip2;
#line 8 "builtins_math_cpp.bas"
makefit(tqbs);
#line 8 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 8 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((double)(func_sqr(*__LONG_L))),qbs_new_txt(" ")));
#line 8 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip2;
#line 8 "builtins_math_cpp.bas"
makefit(tqbs);
#line 8 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 8 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((long double)(((long double)(func_log(*__FLOAT_X))))),qbs_new_txt(" ")));
#line 8 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip2;
#line 8 "builtins_math_cpp.bas"
makefit(tqbs);
#line 8 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 8 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((float)(((float)(func_exp_single(*__INTEGER_I))))),qbs_new_txt(" ")));
#line 8 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip2;
#line 8 "builtins_math_cpp.bas"
makefit(tqbs);
#line 8 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 8 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((long double)(func_exp_float(*__DOUBLE_D))),qbs_new_txt(" ")));
#line 8 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip2;
#line 8 "builtins_math_cpp.bas"
makefit(tqbs);
#line 8 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 8 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((long double)(((long double)(std::atan2(*__INTEGER_I,*__LONG_L))))),qbs_new_txt(" ")));
#line 8 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip2;
#line 8 "builtins_math_cpp.bas"
makefit(tqbs);
#line 8 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 8 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((long double)(std::hypot(*__DOUBLE_D,*__FLOAT_X))),qbs_new_txt(" ")));
#line 8 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip2;
#line 8 "builtins_math_cpp.bas"
makefit(tqbs);
#line 8 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 8 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((double)(func_pi(0,0))),qbs_new_txt(" ")));
#line 8 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip2;
#line 8 "builtins_math_cpp.bas"
makefit(tqbs);
#line 8 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 8 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((double)(func_pi(((double)(2)),1))),qbs_new_txt(" ")));
#line 8 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip2;
#line 8 "builtins_math_cpp.bas"
makefit(tqbs);
#line 8 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 8 "builtins_math_cpp.bas"
qbs_print(nothingstring,1);
#line 8 "builtins_math_cpp.bas"
skip2:
#line 8 "builtins_math_cpp.bas"
qbs_free(tqbs);
#line 8 "builtins_math_cpp.bas"
qbs_cleanup(qbs_tmp_base,0);
#line 8 "builtins_math_cpp.bas"
if(!qbevent)break;evnt(8);}while(r);
#line 9 "builtins_math_cpp.bas"
do{
#line 9 "builtins_math_cpp.bas"
tqbs=qbs_new(0,0);
#line 9 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int16)(((int16)(func_cint_double(*__DOUBLE_D))))),qbs_new_txt(" ")));
#line 9 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip3;
#line 9 "builtins_math_cpp.bas"
makefit(tqbs);
#line 9 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 9 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int16)(((int16)(func_cint_float(*__FLOAT_X))))),qbs_new_txt(" ")));
#line 9 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip3;
#line 9 "builtins_math_cpp.bas"
makefit(tqbs);
#line 9 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 9 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int16)(func_cint_long(*__LONG_L))),qbs_new_txt(" ")));
#line 9 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip3;
#line 9 "builtins_math_cpp.bas"
makefit(tqbs);
#line 9 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 9 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int16)(func_cint_int64(*__INTEGER64_Q))),qbs_new_txt(" ")));
#line 9 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip3;
#line 9 "builtins_math_cpp.bas"
makefit(tqbs);
#line 9 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 9 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int16)((*__INTEGER_I))),qbs_new_txt(" ")));
#line 9 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip3;
#line 9 "builtins_math_cpp.bas"
makefit(tqbs);
#line 9 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 9 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int32)(func_clng_double(*__SINGLE_F))),qbs_new_txt(" ")));
#line 9 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip3;
#line 9 "builtins_math_cpp.bas"
makefit(tqbs);
#line 9 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 9 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int32)(((int32)(func_clng_float(*__FLOAT_X))))),qbs_new_txt(" ")));
#line 9 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip3;
#line 9 "builtins_math_cpp.bas"
makefit(tqbs);
#line 9 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 9 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int32)(func_clng_int64(*__INTEGER64_Q))),qbs_new_txt(" ")));
#line 9 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip3;
#line 9 "builtins_math_cpp.bas"
makefit(tqbs);
#line 9 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 9 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int32)(((int32)((*__INTEGER_I))))),qbs_new_txt(" ")));
#line 9 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip3;
#line 9 "builtins_math_cpp.bas"
makefit(tqbs);
#line 9 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 9 "builtins_math_cpp.bas"
qbs_print(nothingstring,1);
#line 9 "builtins_math_cpp.bas"
skip3:
#line 9 "builtins_math_cpp.bas"
qbs_free(tqbs);
#line 9 "builtins_math_cpp.bas"
qbs_cleanup(qbs_tmp_base,0);
#line 9 "builtins_math_cpp.bas"
if(!qbevent)break;evnt(9);}while(r);
#line 10 "builtins_math_cpp.bas"
do{
#line 10 "builtins_math_cpp.bas"
tqbs=qbs_new(0,0);
#line 10 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((float)(((float)(((double)(*__LONG_L)))))),qbs_new_txt(" ")));
#line 10 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip4;
#line 10 "builtins_math_cpp.bas"
makefit(tqbs);
#line 10 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 10 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((float)(((float)(func_csng_double(*__DOUBLE_D))))),qbs_new_txt(" ")));
#line 10 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip4;
#line 10 "builtins_math_cpp.bas"
makefit(tqbs);
#line 10 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 10 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((float)(((float)(func_csng_float(*__FLOAT_X))))),qbs_new_txt(" ")));
#line 10 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip4;
#line 10 "builtins_math_cpp.bas"
makefit(tqbs);
#line 10 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 10 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((float)((*__SINGLE_F))),qbs_new_txt(" ")));
#line 10 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip4;
#line 10 "builtins_math_cpp.bas"
makefit(tqbs);
#line 10 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 10 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((double)(((double)(*__INTEGER_I)))),qbs_new_txt(" ")));
#line 10 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip4;
#line 10 "builtins_math_cpp.bas"
makefit(tqbs);
#line 10 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 10 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((double)(((double)((*__SINGLE_F))))),qbs_new_txt(" ")));
#line 10 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip4;
#line 10 "builtins_math_cpp.bas"
makefit(tqbs);
#line 10 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 10 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((double)(func_cdbl_float(*__FLOAT_X))),qbs_new_txt(" ")));
#line 10 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip4;
#line 10 "builtins_math_cpp.bas"
makefit(tqbs);
#line 10 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 10 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int64)(func_round_double(*__DOUBLE_D))),qbs_new_txt(" ")));
#line 10 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip4;
#line 10 "builtins_math_cpp.bas"
makefit(tqbs);
#line 10 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 10 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int64)(func_round_float(*__FLOAT_X))),qbs_new_txt(" ")));
#line 10 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip4;
#line 10 "builtins_math_cpp.bas"
makefit(tqbs);
#line 10 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 10 "builtins_math_cpp.bas"
qbs_set(tqbs,qbs_add(qbs_str((int64)(((int64)((*__LONG_L))))),qbs_new_txt(" ")));
#line 10 "builtins_math_cpp.bas"
if (is_error_pending()) goto skip4;
#line 10 "builtins_math_cpp.bas"
makefit(tqbs);
#line 10 "builtins_math_cpp.bas"
qbs_print(tqbs,0);
#line 10 "builtins_math_cpp.bas"
qbs_print(nothingstring,1);
#line 10 "builtins_math_cpp.bas"
skip4:
#line 10 "builtins_math_cpp.bas"
qbs_free(tqbs);
#line 10 "builtins_math_cpp.bas"
qbs_cleanup(qbs_tmp_base,0);
#line 10 "builtins_math_cpp.bas"
if(!qbevent)break;evnt(10);}while(r);
sub_end();
return;
}
==> empty: regsf.txt dyninfo.txt inpchain.txt chain.txt onstrig.txt onkey.txt ontimer.txt runline.txt ontimerj.txt onkeyj.txt onstrigj.txt mainfree.txt
