crates/driver/tests/snapshots/comment_metacommands_plain.typed.snap
---
source: crates/driver/tests/frontend.rs
assertion_line: 103
expression: snap
---
line 2: ConsoleOnly
line 5: Print newline
  Num
    Int 1 : I16
line 8: Print newline
  Num
    Int 2 : I16
